--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "homepage": "http://olaib.github.io/my-portfolio-page" ,
+  "homepage": "https://olaib.github.io/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +39,8 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "eslint": "^8.50.0",
+    "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.0.0"
   }
 }
