--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://olaib.github.io/my-portfolio-page",
+  "homepage": "https://olaib.github.io/olaib.github.io",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
