--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://olaib.github.io/olaib.github.io",
-  "name": "olaib.github.io",
+  "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
